--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div id="chatbot-body">
       <div id="chat-messages">
         <div class="message bot">
-          <strong>Marcel:</strong> Hey, this is your AI virtual chatbot assistant Mert, so I'm here to help you.
+          <strong>Marcel:</strong> Hey, this is your AI virtual chatbot assistant Marcel💎, so I'm here to help you.
         </div>
       </div>
 
